# binsign

./: .gitignore  Cargo.toml  README.md
src/: blake.rs  cli.rs  keys.rs  lib.rs  main.rs  signed_file.rs
